--- a/SoftCotton/app.config
+++ b/SoftCotton/app.config
@@ -4,11 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <!--<add name="cnxsql" connectionString="Data Source=DATASERVER;Initial Catalog=bdsoftcotton;User ID=sa;" providerName="System.Data.SqlClient;" />-->
-    <add name="cnxsql" connectionString="Data Source=.;Initial Catalog=bdsoftcottonV2;Integrated Security=True;" providerName="System.Data.SqlClient;" />
+    <!--<add name="cnxsql" connectionString="Data Source=.;Initial Catalog=bdsoftcotton;User ID=sa;" providerName="System.Data.SqlClient;" />-->
+    <add name="cnxsql" connectionString="Data Source=.;Initial Catalog=bdsoftcotton;Integrated Security=True;" providerName="System.Data.SqlClient;" />
 
-    <!--<add name="cnxsql" connectionString="Data Source=SERVIDOR;Initial Catalog=bdsoftcotton;User ID=usoftcotton;" providerName="System.Data.SqlClient;"/>
-		<add name="cnxsql" connectionString="Data Source=SERVIDOR;Initial Catalog=bdsoftcotton_prueba;User ID=usoftcotton;" providerName="System.Data.SqlClient;"/>-->
+    <add name="cnxsqlproduccion" connectionString="Data Source=34.31.139.111; Initial Catalog=bdsoftcotton; User Id=softcottonuser;Password=claveñ#bd;" />
   </connectionStrings>
   <appSettings>
     <add key="ambiente" value="D" />
